--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -8,6 +8,7 @@ bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
+resources.frontController.plugins.timezone = "SimpleCal_Controller_Plugin_Timezone"
 
 resources.layout.layout = "layout"
 
